--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -44,10 +44,8 @@ library(mapproj)
 ```
 
 
-
-
 ```{r include=FALSE, results="hide", message=FALSE, warning=FALSE}
-# !!!!!!!!!!!!!!!!!!!WARNING!!!!!!!!!!!!!!!!!!!   loading may take some time (w/ my computer: ~10min)
+# !!!!!!!!!!!!!!!!!!!Attention!!!!!!!!!!!!!!!!!!!   loading may take some time (w/ my computer: ~10min)
 # loading Data
 # incident data provided by Mueller and Schwarz (2019)
 inc <- getURL("https://raw.githubusercontent.com/ax3l/chronik-vorfaelle/data/vorfaelle.csv")
@@ -58,78 +56,53 @@ c <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper
 control <- read.csv(text = c)
 
 # scrape wave 1 = attack on paris, france in january (7th)
-w1 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs1_jan_n.csv")
+w1 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs1_jan_de.csv")
 w1_tweets <- read.csv(text = w1)
 
 # loading scraped tweets, wave 2 = attack on copenhagen, denmark in february (14th)
-w2 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs2_feb_n.csv")
+w2 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs2_feb_de.csv")
 w2_tweets <- read.csv(text = w2)
 
 #loading scraped tweets, wave 3 = attack on charleston, USA in june (17th)
-w3 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs3_jun_n.csv")
+w3 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs3_jun_de.csv")
 w3_tweets <- read.csv(text = w3)
 
 # loading scraped tweets, wave 4 = attack on Saint Quentin-Fallavier, France in June (26th)
-w4 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs4_jun_n.csv")
+w4 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs4_jun_de.csv")
 w4_tweets <- read.csv(text = w4)
 
 # loading scraped tweets, wave 5 = attack on Bielefeld, Germany in september (9th)
-w5 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs5_sep_n.csv")
+w5 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs5_sep_de.csv")
 w5_tweets <- read.csv(text = w5)
 
 # loading scraped tweets, wave 6 = attack on Berlin, Germany in September (17th)
-w6 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs6_sep_n.csv")
+w6 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs6_sep_de.csv")
 w6_tweets <- read.csv(text = w6)
 
 # loading scraped tweets, wave 7 = attack on Parramatta City, Australia in october (2nd)
-w7 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs7_oct_n.csv")
+w7 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs7_oct_de.csv")
 w7_tweets <- read.csv(text = w7)
 
 # loading scraped tweets, wave 8 = attack on Paris, France in november (13th)
-w8 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs8_nov_n.csv")
+w8 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs8_nov_de.csv")
 w8_tweets <- read.csv(text = w8)
 
 # loading scraped tweets, wave 9 = attack on San Bernardino, USA in december (2nd)
-w9 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs9_dec_n.csv")
+w9 <- getURL("https://raw.githubusercontent.com/lenniroo/CausalAnalysis_TermPaper/master/Scrape_hs9_dec_de.csv")
 w9_tweets <- read.csv(text = w9)
 
 # remove the URLs
-rm(inc)
-rm(c)
-rm(w1)
-rm(w2)
-rm(w3)
-rm(w4)
-rm(w5)
-rm(w6)
-rm(w7)
-rm(w8)
-rm(w9)
-
+rm(inc, c, w1, w2, w3, w4, w5, w6, w7, w8, w9)
 
 # binding all tweets together
 tweets <- w1_tweets %>%
-  bind_rows(w2_tweets) %>%
-  bind_rows(w3_tweets) %>%
-  bind_rows(w4_tweets) %>%
-  bind_rows(w5_tweets) %>%
-  bind_rows(w6_tweets) %>%
-  bind_rows(w7_tweets) %>%
-  bind_rows(w8_tweets) %>%
-  bind_rows(w9_tweets) %>% # 126089
-  distinct()               # 117836, double tweets: 8253
+  bind_rows(w2_tweets, w3_tweets, w4_tweets, w5_tweets, w6_tweets, w7_tweets, w8_tweets, w9_tweets) %>% # 21591
+  distinct()  # 17557, double tweets: 4034
 
 # remove redundant dataframes of single scrape waves
-rm(w1_tweets)
-rm(w2_tweets)
-rm(w3_tweets)
-rm(w4_tweets)
-rm(w5_tweets)
-rm(w6_tweets)
-rm(w7_tweets)
-rm(w8_tweets)
-rm(w9_tweets)
+rm(w1_tweets, w2_tweets, w3_tweets, w4_tweets, w5_tweets, w6_tweets, w7_tweets, w8_tweets, w9_tweets)
 ```
+
 
 ```{r}
 # encode all tweets to utf-8
@@ -140,7 +113,7 @@ tweetdata <- data.frame(doc_id = tweets$screen_name, text = tweets$text)
 corpus <- Corpus(DataframeSource(tweetdata))
 
 #function to remov URLs
-removeURL <- content_transformer(function(x) gsub("(f|ht)tp(s?)://", "", x, perl=T)) #lock at the unicode!! must fix S+
+removeURL <- content_transformer(function(x) gsub("(f|ht)tp(s?)://\\S+", "", x, perl=T)) #lock at the unicode!! must fix S+
 
 # removing URLs
 corpus <- tm_map(corpus, removeURL)
@@ -154,6 +127,7 @@ rm(d)
 rm(tweetdata)
 rm(corpus)
 ```
+
 
 ```{r}
 # transform to tibble to work the tidyverse package
@@ -175,6 +149,7 @@ tweets$text <- str_replace_all(tweets$text,
 tweets$text <- tolower(tweets$text)
 ```
 
+
 ```{r}
 # delete non german or englisch tweets during removing unicode specific tweets 
 # (contains \s + hexdecimal numbers)
@@ -192,7 +167,6 @@ tweets <- tweets %>%
 
 rm(empty_char)
 ```
-
 
 
 ```{r}
@@ -248,22 +222,24 @@ c_stop <- data.frame(word = c("via", "mehr", "twitter", "com", "pic", "de", "eu"
                                        "inzwischen", "irgendwie", "kennen", "klare", "nd", "palabra", "ohv", "schoene", 
                                        "server", "seien", "sog", "soviel", "svp", "swiss", "tolles", "zdfheute", "aha", 
                                        "al", "blzonline", "bot", "dji", "flue", "ger", "guten", "gutes", "jo", "me", 
-                                       "migazin", "neben", "nen", "phoenix", "sn", "vds"))
+                                       "migazin", "neben", "nen", "phoenix", "fuer", "koennen", "v", "di", "xd", "la", 
+                              "tja", "hm", "klt", "hc", "hd", "az", "dlf", "ekd", "fr", "naja", "hey", "net", "orb", "spoe", 
+                              "uk", "el", "sn", "daher", "immerhin", "le", "zumindest", "ah", "danach", "davor", "gvu", "juhu", 
+                              "ka", "si", "wollt", "iii", "io", "od", "swr"))
 
 c_stopwords <- c_stop %>%
   as_tibble() %>%
   bind_rows(stopwords)
 
 # remove redundant data
-rm(c_stop)
-rm(stopwords)
+rm(c_stop, stopwords)
 
-# create token list 1755 different tokens
+# create token list 1764 different tokens
 tweetwords <- tweets %>%
   unnest_tokens(word, text) %>%
   anti_join(c_stopwords, by = "word") %>%
   count(word,  sort=T) %>%
-  filter(n > 10) #more or less clean dataset with 1503 tokens
+  filter(n > 10) 
 ```
 
 
@@ -281,6 +257,15 @@ f_pl <- data.frame(word = c("fluechtlinge", "migrant", "migranten",
                             "asylant", "asylanten"), 
                    value = -0.0048)
 
+key <- data.frame(word = c("islamisierung", "multikulti", "asyltouristen", 
+                           "illegale", "merkel-gaeste", "zudringlinge", 
+                           "buntland", "dummstaat", "plemplemland", 
+                           "schandland", "bundeskloake", "wohlstandsfluechtlinge"),
+                  value = -0.66)
+
+key_slur <- data.frame(word = c("nafris", "musel", "salafistenschwestern", "kampfmuslimas",
+                                "burka-frauen", "kloneger"),
+                       value = -0.99)
 # sentiments are transformed just as the tweets
 # and a new dataset is created with expression which occurs in both (sentiment/tweet) datasets
 sentis <- sentiments %>%
@@ -291,21 +276,21 @@ sentis <- sentiments %>%
   select(value, word) %>%
   mutate(word = str_to_lower(word)) %>%
   mutate(word = gsub("\\|nn", "", word)) %>%
-  bind_rows(f_pl) %>%
+  bind_rows(f_pl, key, key_slur) %>%
   inner_join(tweetwords, by = "word") %>%
   mutate(sentiment = ifelse(value >= 0, "positive", "negative")) %>%
   rename("freq" = "n") %>%
   arrange(desc(freq))
 
-# remove redundant data
-rm(f_pl)
-rm(sentiments)
-
 # calculate the overall positve and negative sentiments
 sentis %>%
   group_by(sentiment) %>%
   count()
+
+# remove redundant data
+rm(f_pl, key, key_slur, sentiments)
 ```
+
 
 ```{r echo=FALSE, fig.height=5, fig.width=14, warning=FALSE}
 # show the distribution of positive/negative seniments, proper
@@ -325,7 +310,6 @@ sentis %>%
   guides(fill = guide_legend(title = "Sentiment"))
   
 ```
-
 
 
 ```{r}
@@ -364,9 +348,7 @@ ggplot(state_inc, aes(x = long, y = lat, group = group, fill = n)) +
 
 
 ```{r}
-rm(ger)
-rm(states)
-rm(state_inc)
+rm(ger, states, state_inc)
 
 control$state <- str_replace_all(control$state,
                                  c("ue" = "ü"))
@@ -375,6 +357,39 @@ incidents <- incidents %>%
   select(features_properties_date, features_properties_state, features_properties_title) %>%
   rename("date" = "features_properties_date", "state" = "features_properties_state", "title" = "features_properties_title") %>%
   full_join(control, by = "state")
+
+inc_1 <- incidents %>%
+  filter(date >= "2015-01-01" & date <= "2015-01-14")
+
+inc_2 <- incidents %>%
+  filter(date >= "2015-02-07" & date <= "2015-02-21")
+
+inc_3 <- incidents %>%
+  filter(date >= "2015-06-10" & date <= "2015-06-24")
+
+inc_4 <- incidents %>%
+  filter(date >= "2015-06-19" & date <= "2015-07-03")
+
+inc_5 <- incidents %>%
+  filter(date >= "2015-09-02" & date <= "2015-09-16")
+
+inc_6 <- incidents %>%
+  filter(date >= "2015-09-10" & date <= "2015-09-24")
+
+inc_7 <- incidents %>%
+  filter(date >= "2015-09-25" & date <= "2015-10-09")
+
+inc_8 <- incidents %>%
+  filter(date >= "2015-11-06" & date <= "2015-11-20")
+
+inc_9 <- incidents %>%
+  filter(date >= "2015-11-25" & date <= "2015-12-09")
+
+incidents <- inc_1 %>%
+  bind_rows(inc_2, inc_3, inc_4, inc_4, inc_5, inc_6, inc_7, inc_8, inc_9) %>%
+  distinct()
+
+rm(inc_1, inc_2, inc_3, inc_4, inc_5, inc_6, inc_7, inc_8, inc_9)
 
 tweets$timestamp <- as.Date(tweets$timestamp, "%Y-%m-%d %H:%M:%S")
 
@@ -390,23 +405,22 @@ sum_tweets <- tweets %>%
   count() %>%
   rename("tweets" = "n") 
 
-sum_tweets[, 2] <- log(sum_tweets[2])
-
 sum_inc <- incidents %>%
   group_by(date) %>%
   count() %>%
   rename("num_inc" = "n")
 
+all_sum_wm <- sum_tweets %>%
+  inner_join(sum_inc, by = "date")
+
+
+sum_tweets[, 2] <- log(sum_tweets[2])
 sum_inc[, 2] <- log(sum_inc[2])
 
 all_sum <- sum_tweets %>%
   full_join(sum_inc, by = "date") %>%
   replace_na(list(tweets = 0, num_inc = 0))
-
-all_sum_wm <- sum_tweets %>%
-  inner_join(sum_inc, by = "date")
 ```
-
 
 
 ```{r}
@@ -431,7 +445,6 @@ all_sum_wm %>%
 ```
 
 
-
 ```{r}
 sum_t1 <- tweets %>%
   group_by(date) %>%
@@ -444,7 +457,23 @@ all <- incidents %>%
   rename("num_inc" = "n") %>%
   full_join(sum_t1, by = "date") %>%
   full_join(control, by = "state") %>%
-  replace_na(list(tweets = 0))
+  replace_na(list(tweets = 0, num_inc = 0))
+
+rm(all_sum, all_sum_wm, c_stopwords, graph, sum_inc, sum_tweets, tweetwords, sentis, sum_t1, control)
+```
+
+
+
+```{r}
+inc_fra <- all %>%
+  filter(date >= "2015-01-01" & date <= "2015-01-14") %>%
+  mutate(before = if_else(date >= "2015-01-01" & date < "2015-01-07", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-01-01" & date < "2015-01-14", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-01-01" & date < "2015-01-07", 0, 1))
+
+fra <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
+          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra)
+summary(fra)
 ```
 
 
@@ -452,12 +481,11 @@ all <- incidents %>%
 ```{r}
 inc_dnk <- all %>%
   filter(date >= "2015-02-07" & date <= "2015-02-21") %>%
-  na.omit()
+  mutate(before = if_else(date >= "2015-02-07" & date < "2015-02-14", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-02-14" & date < "2015-02-21", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-02-07" & date < "2015-02-14", 0, 1))
 
-inc_dnk$time <- ifelse(inc_dnk$date > "2015-02-14", 1, 0)
-inc_dnk$did <- ifelse(inc_dnk$date > "2015-02-14", 31, 0)
-
-dnk <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+dnk <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_dnk)
 summary(dnk)
 ```
@@ -465,12 +493,11 @@ summary(dnk)
 ```{r}
 inc_usa1 <- all %>%
   filter(date >= "2015-06-10" & date <= "2015-06-24") %>%
-  na.omit()
+  mutate(before = if_else(date >= "2015-06-10" & date < "2015-06-17", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-06-10" & date < "2015-06-24", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-06-10" & date < "2015-06-17", 0, 1))
 
-inc_usa1$time <- ifelse(inc_usa1$date > "2015-06-17", 1, 0)
-inc_usa1$did <- ifelse(inc_usa1$date > "2015-06-17", 0, 809)
-
-usa1 <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+usa1 <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_usa1)
 summary(usa1)
 ```
@@ -478,185 +505,63 @@ summary(usa1)
 ```{r}
 inc_usa2 <- all %>%
   filter(date >= "2015-11-25" & date <= "2015-12-09") %>%
-  na.omit()
+  mutate(before = if_else(date >= "2015-11-25" & date < "2015-12-02", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-11-25" & date <= "2015-12-09", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-11-25" & date < "2015-12-02", 0, 1))
 
-inc_usa2$time <- ifelse(inc_usa2$date > "2015-12-02", 1, 0)
-inc_usa2$did <- ifelse(inc_usa2$date > "2015-12-02", inc_usa2$time * inc_usa2$tweets, 0)
 
-
-usa2 <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+usa2 <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_usa2)
 summary(usa2)
 ```
 
 ```{r}
 inc_fra1 <- all %>%
-  filter(date >= "2015-06-19" & date <= "2015-07-03")
+  filter(date >= "2015-06-19" & date <= "2015-07-03") %>%
+  mutate(before = if_else(date >= "2015-06-19" & date < "2015-06-26", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-06-19" & date <= "2015-07-03", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-06-19" & date < "2015-06-26", 0, 1))
 
-inc_fra1$time <- ifelse(inc_fra1$date > "2015-06-26", 1, 0)
-inc_fra1$did <- ifelse(inc_fra1$date > "2015-06-26", 784, 0)
 
-fra1 <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+fra1 <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra1)
 summary(fra1)
 ```
 
 ```{r}
 inc_deu <- all %>%
-  filter(date >= "2015-09-10" & date <= "2015-09-24")
+  filter(date >= "2015-09-10" & date <= "2015-09-24") %>%
+  mutate(before = if_else(date >= "2015-09-10" & date < "2015-09-17", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-09-10" & date <= "2015-09-24", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-09-10" & date < "2015-09-17", 0, 1))
 
-inc_deu$time <- ifelse(inc_deu$date > "2015-09-17", 1, 0)
-inc_deu$did <- ifelse(inc_deu$date > "2015-09-17", 857, 0)
-
-deu <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+deu <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_deu)
 summary(deu)
 ```
 
 ```{r}
 inc_aus <- all %>%
-  filter(date >= "2015-09-24" & date <= "2015-10-09")
+  filter(date >= "2015-09-24" & date <= "2015-10-09") %>%
+  mutate(before = if_else(date >= "2015-09-24" & date < "2015-10-02", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-09-24" & date <= "2015-10-09", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-09-24" & date < "2015-10-02", 0, 1))
 
-inc_aus$time <- ifelse(inc_aus$date > "2015-10-02", 1, 0)
-inc_aus$did <- ifelse(inc_aus$date > "2015-10-02", 862, 0)
-
-aus <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+aus <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_aus)
 summary(aus)
 ```
 
-
-
-
-
 ```{r}
 inc_fra2 <- all %>%
-  filter(date >= "2015-11-06" & date <= "2015-11-20")
+  filter(date >= "2015-11-06" & date <= "2015-11-20") %>%
+  mutate(before = if_else(date >= "2015-11-06" & date < "2015-11-13", tweets*1, 0)) %>%
+  mutate(after = if_else(date >= "2015-11-06" & date <= "2015-11-20", tweets*1, 0)) %>%
+  mutate(treat = if_else(date >= "2015-11-06" & date < "2015-11-13", 0, 1))
 
-inc_fra2$time <- ifelse(inc_fra2$date > "2015-11-13", 1, 0)
-inc_fra2$did <- ifelse(inc_fra2$date > "2015-11-13", inc_fra2$time * inc_fra2$tweets, 0)
-
-fra2 <- lm(num_inc ~ tweets + did + population_density + foreigners.density + protection_seeking + 
+fra2 <- lm((after - before) ~ treat + num_inc + population_density + foreigners.density + protection_seeking + 
           racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra2)
 summary(fra2)
-```
-
-```{r}
-inc_fra_wt <- all %>%
-  filter(date >= "2015-01-02" & date <= "2015-01-16")
-
-inc_fra_wt$time <- ifelse(inc_fra_wt$date > "2015-01-09", 1, 0)
-inc_fra_wt$treated <- ifelse(inc_fra_wt$date > "2015-01-09", 
-                             ifelse(inc_fra_wt$num_inc < 1, 0, 1), 0)
-inc_fra_wt$did <- ifelse(inc_fra_wt$date > "2015-01-09", inc_fra_wt$time*inc_fra_wt$time, 0)
-
-fra_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra_wt)
-summary(fra_wt)
-```
-
-
-```{r}
-inc_dnk_wt <- all %>%
-  filter(date >= "2015-02-07" & date <= "2015-02-21") %>%
-  na.omit()
-
-inc_dnk_wt$time <- ifelse(inc_dnk_wt$date > "2015-02-14", 1, 0)
-inc_dnk_wt$treated <- ifelse(inc_dnk_wt$date > "2015-02-14", 1, 0)
-inc_dnk_wt$did <- ifelse(inc_dnk_wt$date > "2015-02-14", inc_dnk_wt$time*inc_dnk_wt$treated, 0)
-
-dnk_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_dnk_wt)
-summary(dnk_wt)
-```
-
-```{r}
-inc_usa1_wt <- all %>%
-  filter(date >= "2015-06-10" & date <= "2015-06-24")
-
-inc_usa1_wt$time <- ifelse(inc_usa1_wt$date > "2015-06-17", 1, 0)
-inc_usa1_wt$treated <- ifelse(inc_usa1_wt$date > "2015-06-17", 
-                             ifelse(inc_usa1_wt$num_inc < 1, 0, 1), 0)
-inc_usa1_wt$did <- ifelse(inc_usa1_wt$date > "2015-06-17", inc_usa1_wt$time*inc_usa1_wt$num_inc, 0)
-
-usa1_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_usa1_wt)
-summary(usa1_wt)
-```
-
-```{r}
-inc_usa2_wt <- all %>%
-  filter(date >= "2015-11-25" & date <= "2015-12-09")
-
-inc_usa2_wt$time <- ifelse(inc_usa2_wt$date > "2015-12-02", 1, 0)
-inc_usa2_wt$treated <- ifelse(inc_usa2_wt$date > "2015-12-02", 
-                             ifelse(inc_usa2_wt$num_inc < 1, 0, 1), 0)
-inc_usa2_wt$did <- ifelse(inc_usa2_wt$date > "2015-12-02", inc_usa2_wt$time * inc_usa2_wt$num_inc, 0)
-
-
-usa2_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_usa2_wt)
-summary(usa2_wt)
-```
-
-```{r}
-inc_fra1_wt <- all %>%
-  filter(date >= "2015-06-19" & date <= "2015-07-03")
-
-inc_fra1_wt$time <- ifelse(inc_fra1_wt$date > "2015-06-26", 1, 0)
-inc_fra1_wt$treated <- ifelse(inc_fra1_wt$date > "2015-06-26", 
-                             ifelse(inc_fra1_wt$num_inc < 1, 0, 1), 0)
-inc_fra1_wt$did <- ifelse(inc_fra1_wt$date > "2015-06-26", inc_fra1_wt$num_inc*inc_fra1_wt$time, 0)
-
-fra1_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra1_wt)
-summary(fra1_wt)
-```
-
-```{r}
-inc_deu_wt <- all %>%
-  filter(date >= "2015-09-10" & date <= "2015-09-24")
-
-inc_deu_wt$time <- ifelse(inc_deu_wt$date > "2015-09-17", 1, 0)
-inc_deu_wt$treated <- ifelse(inc_deu_wt$date > "2015-09-17", 
-                             ifelse(inc_deu_wt$num_inc < 1, 0, 1), 0)
-inc_deu_wt$did <- ifelse(inc_deu_wt$date > "2015-09-17", inc_deu_wt$num_inc*inc_deu_wt$time, 0)
-
-deu_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_deu_wt)
-summary(deu_wt)
-```
-
-```{r}
-inc_aus_wt <- all %>%
-  filter(date >= "2015-09-24" & date <= "2015-10-09")
-
-inc_aus_wt$time <- ifelse(inc_aus_wt$date > "2015-10-02", 1, 0)
-inc_aus_wt$treated <- ifelse(inc_aus_wt$date > "2015-10-02", 
-                             ifelse(inc_aus_wt$num_inc < 1, 0, 1), 0)
-inc_aus_wt$did <- ifelse(inc_aus_wt$date > "2015-10-02", inc_aus_wt$num_inc*inc_aus_wt$time, 0)
-
-aus_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_aus_wt)
-summary(aus_wt)
-```
-
-```{r}
-inc_fra2_wt <- all %>%
-  filter(date >= "2015-11-06" & date <= "2015-11-20")
-
-inc_fra2_wt$time <- ifelse(inc_fra2_wt$date > "2015-11-13", 1, 0)
-inc_fra2_wt$treated <- ifelse(inc_fra2_wt$date > "2015-11-13", 
-                             ifelse(inc_fra2_wt$num_inc < 1, 0, 1), 0)
-inc_fra2_wt$did <- ifelse(inc_fra2_wt$date > "2015-11-13", inc_fra2_wt$time*inc_fra2_wt$time, 0)
-
-fra2_wt <- lm(num_inc ~ did + time + treated + population_density + foreigners.density + protection_seeking + 
-          racism_level_perc + hh_income_net + digital_infrastructure_16_perc, data = inc_fra2_wt)
-summary(fra2_wt)
-```
-
-```{r}
-summary(lm(tweets ~ num_inc, data = all))
 ```
 
 
